# softwaresystem

./: .gitignore  Cargo.toml
scripts/: benchmark_groq.rs  benchmark_models.rs  cleanup.rs  test_prompts.rs  test_speed.rs
src/: lib.rs  main.rs
src/config/: database.rs  redis.rs
src/modules/: mod.rs
src/modules/ai/: controller.rs  crud.rs  model.rs  routes.rs  schema.rs
src/modules/session/: controller.rs  crud.rs  mod.rs  model.rs  routes.rs  schema.rs
src/modules/stt/: controller.rs  crud.rs  model.rs  routes.rs  schema.rs
src/modules/transcription/: controller.rs  crud.rs  model.rs  routes.rs  schema.rs
src/services/: llm.rs  mod.rs  stt.rs
tests/: ai_test.rs  session_test.rs  stt_test.rs  transcription_test.rs
