[package]
name = "cleuly"
version = "0.1.0"
edition = "2021"
default-run = "cleuly"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["multipart"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.4.1"
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.28", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[[bin]]
name = "cleanup"
path = "scripts/cleanup.rs"

[dev-dependencies]
axum-test = "18.4.1"
tokio-test = "0.4.4"
